@@ -132,6 +132,9 @@ Changes from 4.3.x -> 4.4-alpha
   the server OS and client class
 * Add 'histsync' diagnostic command to force spurious stachg on next status
   message, causing xymond_history to update history file if color doesn't match.
+* xymond: new --reload-interval opt can be used to control how often config files are
+  scanned for changes (and re-processed if necessary). Previously, was equivalent
+  to checkpoint interval. Default: 10m
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
